# spine-engine

./: .coveragerc  .gitattributes  .gitignore  README.md  dev-requirements.txt  pylintrc  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: run_unit_tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/autoapi/: index.rst
docs/source/autoapi/spine_engine/: index.rst
docs/source/autoapi/spine_engine/config/: index.rst
docs/source/autoapi/spine_engine/execution_managers/: index.rst
docs/source/autoapi/spine_engine/load_project_items/: index.rst
docs/source/autoapi/spine_engine/multithread_executor/: index.rst
docs/source/autoapi/spine_engine/project_item/: index.rst
docs/source/autoapi/spine_engine/project_item_loader/: index.rst
docs/source/autoapi/spine_engine/spine_engine/: index.rst
docs/source/autoapi/spine_engine/spine_engine_server/: index.rst
docs/source/autoapi/spine_engine/utils/: index.rst
docs/source/autoapi/spine_engine/version/: index.rst
spine_engine/: __init__.py  cksm.py  config.py  event.py  event_publisher.py  exception.py  execution_managers.py  executor.py  helpers.py  helpers_qt_free.py  jumpster.py  load_project_items.py  logger_interface.py  multithread.py  project_item_loader.py  shared_memory_io_manager.py  spine_engine.py  spine_engine_experimental.py  spine_engine_server.py  version.py
spine_engine/execution_managers/: __init__.py  conda_kernel_spec_manager.py  conda_kernel_spec_runner.py  execution_manager_base.py  kernel_execution_manager.py  persistent_execution_manager.py  process_execution_manager.py  spine_repl.jl  spine_repl.py  terminal_execution_manager.py
spine_engine/multithread_executor/: __init__.py  executor.py  multithread.py  thread_executor.py
spine_engine/project/: backward_jump.py  connection.py  exception.py  filter_settings.py  models.py  project.py  project_dir.py  project_item.py  project_item_specification.py
spine_engine/project_item/: __init__.py  connection.py  executable_item_base.py  project_item_info.py  project_item_resource.py  project_item_specification.py  project_item_specification_factory.py  resource_manager.py
spine_engine/pydantic_models/: models.py
spine_engine/server/: README.txt  README_REMOTE_EXECUTION.txt  RemoteConnectionHandler.py  RemotePingHandler.py  RemoteSpineService.py  RemoteSpineServiceImpl.py  __init__.py  backend.py  certificate_creator.py  engine_server.py  persistent_execution_service.py  ping_service.py  project_extractor.py  project_extractor_service.py  project_remover_service.py  project_retriever.py  project_retriever_service.py  remote_connection_handler.py  remote_event_query_handler.py  remote_execution_handler.py  remote_execution_service.py  remote_ping_handler.py  remote_spine_service_impl.py  request.py  service_base.py  start_server.py  zmq_server.py
spine_engine/server/connectivity/: ZMQConnection.py  ZMQServer.py  ZMQServerObserver.py  __init__.py  certificate_creator.py  zmq_connection.py  zmq_server.py  zmq_server_observer.py
spine_engine/server/util/: EventDataConverter.py  FileExtractor.py  ServerMessage.py  ServerMessageParser.py  __init__.py  event_data_converter.py  file_extractor.py  server_message.py  server_message_parser.py  zip_handler.py
spine_engine/spine_io/: __init__.py  gdx_utils.py  io_api.py  type_conversion.py
spine_engine/spine_io/exporters/: __init__.py  excel.py  gdx.py
spine_engine/spine_io/importers/: __init__.py  csv_reader.py  datapackage_reader.py  excel_reader.py  gdx_connector.py  json_reader.py  sqlalchemy_connector.py
spine_engine/utils/: __init__.py  chunk.py  command_line_arguments.py  execution_resources.py  helpers.py  logging_process.py  publisher_logger.py  queue_logger.py  returning_process.py  serialization.py
tests/: __init__.py  test_SpineEngine.py  test_execution_managers.py  test_load_project_items.py  test_spine_engine.py
tests/execution_managers/: __init__.py  test_kernel_execution_manager.py  test_persistent_execution_manager.py  test_process_execution_manager.py
tests/mock_project_items/items_module/: __init__.py
tests/mock_project_items/items_module/test_item/: executable_item.py  specification_factory.py
tests/project/: test_backward_jump.py  test_connection.py  test_model.py  test_models.py  test_project.py  test_project_dir.py  test_project_item_specification.py
tests/project_item/: __init__.py  test_ExecutableItem.py  test_connection.py  test_project_item_resource.py
tests/pydantic_models/: test_models.py
tests/server/: __init__.py  msg_data1.txt  msg_data2.txt  test_EngineServer.py  test_PingService.py  test_ProjectExtractorService.py  test_ProjectRemoverService.py  test_RemoteConnHandlerZMQServer.py  test_RemoteConnectionHandler.py  test_RemoteExecutionHandler.py  test_RemoteExecutionService.py  test_RemotePingHandler.py  test_RemoteSpineServiceImpl.py  test_start_server.py
tests/server/connectivity/: __init__.py  test_EngineServer.py  test_ZMQServer.py
tests/server/util/: testMsg.txt  testMsg2.txt  test_EventDataConverter.py  test_FileExtractor.py  test_ServerMessage.py  test_ServerMessageParser.py  test_ZipHandler.py
tests/spine_io/: __init__.py  test_excel_integration.py  test_type_coversion.py
tests/spine_io/exporters/: __init__.py  test_excel.py  test_gdx.py
tests/spine_io/importers/: __init__.py  test_CSVConnector.py  test_GdxConnector.py
tests/utils/: __init__.py  test_chunk.py  test_command_line_args.py  test_helpers.py  test_queue_logger.py  test_serialization.py
(+26 files in other folders)
