[project]
name = "spine_engine"
dynamic = ["version"]
authors = [{name = "Spine Project consortium", email = "spine_info@vtt.fi"}]
license = {text = "LGPL-3.0-or-later"}
description = "A package to run Spine workflows."
keywords = ["energy system modelling", "workflow", "optimisation", "database"]
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
	    "Programming Language :: Python :: 3",
	    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	    "Operating System :: OS Independent",
]
requires-python = ">=3.8.1, <3.12"
dependencies = [
    # dagster >= 0.12.9 requires alembic that is incompatible with spinedb_api
    "dagster>=0.12.6, <0.12.9",
    # https://developers.google.com/protocol-buffers/docs/news/2022-05-06#python-updates
    "protobuf<3.21.0",
    "networkx>2.5.1",
    "datapackage>=1.15.2, <1.16",
    "jupyter_client>=6.0",
    "spinedb_api>=0.29.0",
    "pyzmq >=21.0",
    # dagster 0.12.8 requires Jinja2<3.0, which tries to import
    # soft_unicode, which has been removed in markupsafe 2.1
    "markupsafe < 2.1",
]

[project.urls]
Repository = "https://github.com/spine-tools/spine-engine"

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "spine_engine/version.py"
version_scheme = "release-branch-semver"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
spine_engine = ["execution_managers/spine_repl.jl"]

[tool.setuptools.packages.find]
exclude = [
	"bin*",
	"docs*",
	"fig*",
	"tests*",
]

[tool.coverage.run]
source = ["spine_engine"]
branch = true

[tool.coverage.report]
ignore_errors = true

[tool.black]
line-length = 120
skip-string-normalization = true
exclude = '\.git'
